<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="0dp"
    android:weightSum="1"
    android:baselineAligned="false">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/towingcar"
            android:contentDescription="@string/app_logo_action_bar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/bangers"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

    <ImageView
        android:id="@+id/sign_out"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/sign_out_button_action_bar"
        android:src="@drawable/ic_sign_out" />

</LinearLayout>