<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fece2f"
    tools:context="tn.smartCities.chengApp.activity.WelcomeActivity">

    <Button
        android:id="@+id/logIn_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@android:color/black"
        android:drawableEnd="@drawable/ic_baseline_input_24"
        android:drawablePadding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/black"
        android:drawableEnd="@drawable/ic_exit"
        android:drawablePadding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="405dp"
        android:layout_height="161dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <ImageView
        android:id="@+id/logoBackground"
        android:layout_width="538dp"
        android:layout_height="562dp"
        android:src="@drawable/splash"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="280dp"
        android:layout_height="199dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/towingcar"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="264dp"
        android:layout_height="49dp"
        android:layout_marginBottom="112dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>