<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tn.smartCities.chengApp.activity.MainActivity" >

    <include
        layout="@layout/content_timer"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />

   <Button
       android:id="@+id/notify_btn"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="128dp"
       android:background="@drawable/button_round"
       android:text="@string/notify_btn_text"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.942"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
        android:id="@+id/take_front_photo"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/button_round"
        android:text="@string/take_front_photo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/take_back_photo"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/button_round"
        android:text="@string/take_back_photo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/done_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/done_icon_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/error_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        android:src="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/error_icon_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        android:src="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent" />

   <EditText
       android:id="@+id/licensePlate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="128dp"
       android:autofillHints=""
       android:ems="10"
       android:inputType="textPersonName"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.213"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/send_btn"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="48dp"
       android:background="@drawable/button_round"
       android:text="@string/send_btn_text"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.495"
       app:layout_constraintStart_toStartOf="parent" />

   <Spinner
       android:id="@+id/placeSpinner"
       android:layout_width="207dp"
       android:layout_height="43dp"
       android:layout_marginBottom="212dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.225"
       app:layout_constraintStart_toStartOf="parent" />

   <TextView
       android:id="@+id/choose_place"
       android:layout_width="98dp"
       android:layout_height="28dp"
       android:layout_marginBottom="224dp"
       android:text="مكان الحجز"
       android:textAlignment="center"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.878"
       app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>